2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* glib/goption.c: Use g_print to print out --help text in
	locale encoding.  (#469551, Takao Fujiwara)

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* glib/gkeyfile.c: Set length out param in list-returning functions
	to 0 when returning NULL.  (#498728, Christian Persch)

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* configure.in: Check whether assembler supports numerical local
	labels.

	* glib/gatomic.c: Fix powerpc implementation of atomic for
	platforms where the assembler doesn't support numerical local
	labels.  (#445362)

2007-11-19  Marco Barisione  <marco@barisione.org>

	Merge from trunk:

	* glib/gregex.c: When the compilation of a pattern fails in the error
	message use the character offset and not the byte offset.

	* glib/gregex.c: Pass an unsigned long instead of an int to
	pcre_fullinfo() to avoid problems on 64-bit systems (#498113, Kouhei
	Sutou)

2007-11-13  Cody Russell  <bratsche@gnome.org>

	Merge from trunk:

	* docs/reference/gobject/gobject-docs.sgml:
	* docs/reference/gobject/tut_gsignal.xml:
	* docs/reference/gobject/tut_gtype.xml:
	* docs/reference/gobject/tut_intro.xml:
	* docs/reference/gobject/tut_tools.xml:
	* docs/reference/gobject/tut_howto.xml:
	* docs/reference/gobject/tut_gobject.xml: Documentation fixes.
	Recommend macro type names such as NAUTILUS_TYPE_WINDOW (not
	NAUTILUS_WINDOW_TYPE).  Fixed text which erroneously stated that 
	superclass initializers don't run when an object is 
	instantiated.  Fixed numerous spelling mistakes.  Minor grammar 
	edits. (#490637, Adam Dingle)

2007-11-09  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Revert an accidental merge, noticed by Fred Peters.

2007-11-08  Matthias Clasen <mclasen@redhat.com>

	Merge from trunk:

	* glib/gconvert.c (g_convert_with_iconv): Try harder to reset
	shift state with AIX iconv().  (#467537)
