@@ -2,6 +2,15 @@
 
 	Merge from trunk:
 
+	* glib/gbase64.c (g_base64_encode): Don't refuse to encode
+	a single byte.  (Milan Crha)
+
+	* tests/base64-test.c: Test encoding short strings.
+
+2007-11-24  Matthias Clasen  <mclasen@redhat.com>
+
+	Merge from trunk:
+
 	* glib/goption.c: Use g_print to print out --help text in
 	locale encoding.  (#469551, Takao Fujiwara)
 
